ansible/roles/kubernetes_deploy_components/files/testTemplates/test-serviceaccount-role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-namespace-test
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: nginx-namespace-test
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccount: nginx-service-account
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80


###################
