ansible/roles/kubernetes_deploy_components/files/testTemplates/deploy_nginx_for_testing-10-work.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
     app: nginx-deployment
spec:
 replicas: 3
 template:
   metadata:
     labels:
       app: nginx
   spec:
     containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
#    expose: "true"
    app: nginx
  name: nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
#    nodePort: 30011
  selector:
#    app: nginx-deployment
    app: nginx
  type: NodePort
#  externalIPs:
  - 10.3.3.150
  - 10.3.3.151
  - 10.3.3.152
#  type: LoadBalancer
#  externalTrafficPolicy: Local

#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: app-ingress-8082
#spec:
#  backend:
#    serviceName: nginx
#    servicePort: 8081

#  rules:
#  - http:
#      paths:
#      - path: /test
#        backend:
#          serviceName: nginx
#          servicePort: 8081


#  +++++
#---
#apiVersion: v1
#kind: Service
#metadata:
#  labels:
#    expose: "true"
#    app: nginx-deployment
#  name: nginx
#spec:
#  selector:
#    app: nginx
#  ports:
#    - protocol: TCP
#      port: 8081
#      targetPort: 80
#  type: ClusterIP
#  externalIPs:
#    - 10.3.3.153
