ansible/roles/kubernetes_deploy_components/files/testTemplates/nginx-controller-deploy-2.yaml
---
# Ingress Controller
apiVersion: extensions/v1beta1
#kind: DaemonSet
kind: Deployment
metadata:
  name: nginx-ingress-default
  namespace: kube-system
spec:
  replicas: 18
  selector:
    matchLabels:
      name: nginx-ingress-default
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: nginx-ingress-default
      name: nginx-ingress-default
      namespace: kube-system
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --apiserver-host=https://k8sm01.test.internal:6443
        - --enable-ssl-chain-completion=true
#        - --enable-ssl-chain-completion=false
        - --logtostderr
        - --configmap=$(POD_NAMESPACE)/nginx-ingress-config
        - --default-ssl-certificate=$(POD_NAMESPACE)/ca-key-pair
#        - --enable-dynamic-certificates=true
        - --v=10
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
#        - --default-ssl-certificate=$(POD_NAMESPACE)/nginx-controller-secret
#        - --default-ssl-certificate=$(POD_NAMESPACE)/default-tls
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.23.0
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: nginx-ingress-default
        ports:
        - containerPort: 443
          hostPort: 443
          protocol: TCP
        - containerPort: 80
          hostPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
#      serviceAccountName: secret-tls-172
#      serviceAccountName: ingress-controller-admin
      terminationGracePeriodSeconds: 60

#> kubectl create secret tls nginx-controller-test --key ansible/certificate/k8s_access_roles/kubeadmin/admin-key.pem --cert ansible/certificate/k8s_access_roles/kubeadmin/admin.pem

## Example TLS Secret
#apiVersion: v1
#kind: Secret
#type: Opaque
#metadata:
#  name: test-tls
#  namespace: examples
#data:
#  tls.crt: # <base64-encoded cert>
#  tls.key: # <base64-encoded key>

# Example Ingress
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: test-ingress
##  namespace: examples
#spec:
#  rules:
#  - host: k8sw01.test.internal
#    http:
#      paths:
#      - backend:
#          serviceName: test-svc
#          servicePort: 3000
#  tls:
#  - hosts:
#    - k8sw01.test.internal
#    secretName: nginx-controller-test


######################### APP ####################
---
piVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
  namespace: ingress-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend
        # Any image is permissable as long as:
        # 1. It serves a 404 page at /
        # 2. It serves 200 on a /healthz endpoint
        image: gcr.io/google_containers/defaultbackend:1.4
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---

apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: ingress-nginx
  labels:
    app: default-http-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: default-http-backend
