ansible/roles/kubernetes_deploy_components/files/testTemplates/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-example01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /echo1
        backend:
          serviceName: echo1
          servicePort: 80
      - path: /echo2
        backend:
          serviceName: echo2
          servicePort: 80
